# hr-mgmt

./: README.md  index.html  main.py  pyproject.toml
db/: conn.py
