[tool.poetry]
name = "py2lab-hr"
version = "0.1.0"
description = "HR mangement for py2lab"
authors = ["Jess Monter"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.4"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
